Changed the configuration and removed sysout statements

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
       name: bbscart
       password: bbscart
       username: bbscart
-    bootstrap-hosts: ${CASSANDRA_URI}
+    bootstrap-hosts: ${CASSANDRA_HOST_URL}
 
 swagger:
   host:
